login.css
    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');


main {
    margin-top: 70px; 
}

/* Navigation Bar */
#First-Section {
    padding: 10px;
    align-items: center;
}

nav {
    background-color: #EE4D2D;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 1000;
    padding: 10px;
    font-family: "Poppins",sans-serif;   
    height: 135px;
}


ul {
    list-style: none;
    margin: 0;
    display: flex; 
    margin-top: -23px;
    margin-left: 0;
    align-items: center;
    
}

li {
    margin-right: 20px; 
}

li.active {
    margin-left: 60%;
}

a {
    text-decoration: none;
    color: white; 
    font-size: 20px; 
    padding: 14px;
    display: inline-block;
    transition: color 0.3s; 
}

a:hover {
    color: #ffffff;
     

}

#First-Section img {
    width: 200px;    
    cursor: pointer; 

}

#Second-Section{
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    font-family: "Poppins",sans-serif;   

}


.frgt-pw {
    color: red;
    text-decoration: underline;
}

.wrapper{
    position: relative;
    width: 400px;
    height: 440px;
    background: transparent;
    border: 2px solid rgba(4, 3, 3, 0.5);
    border-radius: 20px;
    backdrop-filter: blur (20px);
    box-shadow: 0 0 30px rgba(0,0,0,.5);
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    transition: height .2s ease;
}

.wrapper.active{
    height: 520px;

}

.wrapper.active .form-box h2 {
    transform: translateY(-40px);
}

.wrapper .form-box{
    width: 100%;
    padding: 40px;
    transform: translateX(0);
}

.wrapper .form-box.login {
    transform: translateX(0);
}

.wrapper.active .form-box.login {
    transform: translateX(-400px);
}

.wrapper .form-box.register {
    position: absolute;
    transform: translateX(400px) ;
    height: 400px;
    width: auto;
    margin-top: -62px;
}

.wrapper.active .form-box.register {
    transition: transform .18s ease;
    transform: translateX(0);
}

.wrapper.active .form-box .input-box {
    transform: translateY(-40px);
}

.form-box h2 {
    font-size: 2em;
    color: #162938;
    text-align: center;
    transform: translateY(0);
}

.input-box {
    position: relative;
    width: 100%;
    height: 50px;
    border-bottom: 2px solid #162938;
    margin: 30px 0;
    transform: translateY(0);
}

.input-box label {
    position: absolute;
    top: 0;
    left: 5px;
    transform: translateY(-50%);
    font-size: 1em;
    color: #162938;
    font-weight: 500;
    pointer-events: none;
    transition: .5s;
}


.input-box input:focus~label,
.input-box input:valid~label {
    top: -5px;
}


.input-box input{
    width: 100%;
    height: 100%;
    background: transparent;
    border: none;
    outline: none;
    font-size: 1em;
    color:#162938;
    font-weight: 600;
    padding: 0 35px 0 5px;
}

.input-box .icon{
    position: absolute;
    right: 8px;
    font-size: 1.2em;
    color:#162938;
    line-height: 57px;
}

.remember-forgot-login{
    font-size: .9em;
    color: #162938;
    font-weight: 500;
    margin: -5px 0px 15px;
    display: flex;
    justify-content: space-between;
}

.remember-forgot-register{
    font-size: .9em;
    color: #162938;
    font-weight: 500;
    margin: -42px 0px 15px;
    display: flex;
    justify-content: space-between;
}

.remember-forgot label input{
    accent-color: #162938;
    margin-right: 3px;
}

.remember-forgot a{
    color: #162938;
}

.frgt-pw{
    font-size: 13px;
    
}

.btn{
    width: 100%;
    height: 45px;
    background: #EE4D2D;
    border: none;
    outline: none;
    border-radius: 6px;
    cursor: pointer;
    font-size: 1em;
    color: #fff;
    font-weight: 500;
    font-family: "Poppins",sans-serif;   

}

.login-register{
    font-size: .9em;
    color: #162938;
    text-align: center;
    font-weight: 500;
    margin: 25px 0px;
}

.login-register p a{
    color: #162938;
    text-decoration: none;
    font-weight: 600;
}

.login-register p a:hover{
    text-decoration: underline;
    
}

